2001-02-19   <jdaniel@mit.edu>

	* tnt.el (tnt-send-idle): Added a call to 
	(add-hook 'pre-command-hook 'tnt-send-unidle).  pre-command-hook is 
	called before every user-command which makes the unidle-timer
	unnecessary.  I think buggy emacs versions still keep tnt-send-idle 
	from being called when it should, but no longer cause spurious calls 
	to tnt-send-unidle.
	(tnt-send-unidle): Added call to remove-hook the hook added by 
	tnt-send-idle
	(tnt-use-idle-timer): Removed check for tnt-buggy-idle and the note 
	about buggy emacs versions
	(tnt-buggy-idle): Removed
	(tnt-unidle-timer): Removed
	(tnt-send-unidle-after): Removed
	(tnt-shutdown): Swapped unidle-timer stuff with a call to remove-hook
	(tnt-handle-sign-on): Removed call to start tnt-unidle-timer
	(tnt-test-for-buggy-idle): Removed

2001-02-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-html-regexps): now stripping out <PRE> tags 

2001-01-28    <tntdevel@brokendreams.net>

	* tnt.el (tnt-pounce-delete): Added a message when deleting an 
	existing pounce message.

2001-01-16    <tntdevel@brokendreams.net>

	* tnt.el (tnt-set-buddy-status): Added messages when a user sets
	themselves as away, and returns (for convenience).  

2001-01-10    <tntdevel@brokendreams.net>

	* tnt.el (tnt-shutdown): Removed clearing of pounce msgs.. They should 
	stick around.

2001-01-07    <tntdevel@brokendreams.net>

	* tnt.el (tnt-send-pounce): Made null "" messages send a "user is now
	available" message to their buffer.
	(tnt-pounce-add): Made null "" messages remain null, rather than being
	sent as "none".
	(tnt-play-sound): Added fucntionality for playing sounds corresponding
	to incoming IM's, outgoing IM's, and first receipt of IM's.
	(tnt-handle-im-in): Added a call to (tnt-play-sound 'incoming)
	(tnt-send-text-as-instant-message): Added a call to 
	(tnt-play-sound 'outgoing).  I've restricted this to here because it
	makes away messages silent as they should be.